# atlas-intel

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  dashboard.html  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_nulls_not_distinct_dedup.py  003_add_transcript_tables.py  004_add_market_data_tables.py  005_add_alternative_data_tables.py  006_add_sync_job_tables.py  007_add_macro_indicators.py  008_add_material_events.py  009_add_patents.py  010_add_congress_trades.py  011_add_alert_tables.py
scripts/: init-db.sql  seed_watchlist.py  validate_pipeline.py
src/atlas_intel/: __init__.py  cache.py  cli.py  config.py  database.py  logging.py  main.py  metrics.py  scheduler.py
tests/: conftest.py
tests/api/: test_alerts_api.py  test_analyst_api.py  test_anomaly_api.py  test_companies_api.py  test_congress_api.py  test_dashboard_api.py  test_events_api.py  test_filings_api.py  test_financials_api.py  test_insider_api.py  test_institutional_api.py  test_macro_api.py  test_metrics_api.py  test_news_api.py  test_ops_api.py  test_patents_api.py  test_prices_api.py  test_query_api.py  test_reports_api.py  test_screening_api.py  test_signals_api.py  test_transcripts_api.py  test_valuation_api.py
tests/fixtures/: company_tickers.json  companyfacts_aapl.json  congress_trades.json  fmp_analyst_estimates_aapl.json  fmp_analyst_grades_aapl.json  fmp_historical_prices.json  fmp_insider_trading_aapl.json  fmp_institutional_aapl.json  fmp_key_metrics_aapl.json  fmp_news_aapl.json  fmp_price_target_aapl.json  fmp_profile_aapl.json  fmp_transcript_aapl.json  fred_gdp.json  sec_8k_efts.json  (+3 more)
(+192 files in other folders)
